# test-meson

./: README.md  meson.build
src/: main.cpp
subprojects/a/: meson.build
subprojects/a/include/a/: a.h
subprojects/a/src/: a.cpp
subprojects/b/: meson.build
subprojects/b/include/b/: b.h
subprojects/b/src/: b.cpp
